base-installer (1.73) UNRELEASED; urgency=low

  * Add VIA C7 processor definition and test case. Closes: #410819.

 -- Aurélien GÉRÔME <ag@roxor.cx>  Tue, 13 Feb 2007 17:58:27 +0100

base-installer (1.72) unstable; urgency=low

  [ Colin Watson ]
  * Fix processor detection on SMP i386 and amd64 systems when booting with
    an SMP-capable kernel.
    See https://bugs.launchpad.net/ubuntu/+source/base-installer/+bug/79109;
    test case taken from that bug.

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat
  * Hebrew (he.po) by Lior Kaplan
  * Latvian (lv.po) by Aigars Mahinovs
  * Malayalam (ml.po) by Praveen A
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Romanian (ro.po) by Eddy Petrișor
  * Slovak (sk.po) by Peter Mann

 -- Frans Pop <fjp@debian.org>  Wed, 31 Jan 2007 11:23:40 +0100

base-installer (1.71) unstable; urgency=low

  [ Colin Watson ]
  * Strip comments from debian/templates-arch in output templates file.

  [ Frans Pop ]
  * Also write the default header comments for kernel-img.conf.
  * For powerpc/prep systems, write the root partition to an initramfs-tools
    config file. Thanks to Ulrich Teichert for testing. Closes: #405572.

  [ Updated translations ]
  * Belarusian (be.po) by Pavel Piatruk
  * Danish (da.po) by Claus Hindsgaul
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Galician (gl.po) by Jacobo Tarrio
  * Kurdish (ku.po) by Amed Çeko Jiyan
  * Panjabi (pa.po) by A S Alam
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Portuguese (pt.po) by Miguel Figueiredo
  * Slovenian (sl.po) by Matej Kovačič
  * Swedish (sv.po) by Daniel Nylander
  * Thai (th.po) by Theppitak Karoonboonyanan

 -- Frans Pop <fjp@debian.org>  Sat,  6 Jan 2007 20:15:26 +0100

base-installer (1.70) unstable; urgency=low

  * Add support for selecting prep kernels (powerpc). Closes: #386265.
    Thanks to Sven Luther for the patch.