@@ -1,0 +1,24 @@
+Processor       : XScale-PXA255 rev 6 (v5l)
+BogoMIPS        : 397.31
+Features        : swp half thumb fastmult edsp
+CPU implementor : 0x69
+CPU architecture: 5TE
+CPU variant     : 0x0
+CPU part        : 0x2d0
+CPU revision    : 6
+Cache type      : undefined 5
+Cache clean     : undefined 5
+Cache lockdown  : undefined 5
+Cache unified   : harvard
+I size          : 32768
+I assoc         : 32
+I line length   : 32
+I sets          : 32
+D size          : 32768
+D assoc         : 32
+D line length   : 32
+D sets          : 32
+
+Hardware        : ADS VGX
+Revision        : 0000
+Serial          : 0000000000000000
