@@ -1,0 +1,12 @@
+subarch iop32x
+cpuinfo n2100.cpuinfo
+majors 2.6
+flavour iop32x
+kernel-2.6 linux-image-2.6-iop32x
+usable \
+  linux-image-2.6-iop32x
+unusable \
+  linux-image-2.6-ixp4xx \
+  linux-image-2.6-netwinder \
+  linux-image-2.6-rpc \
+  linux-image-2.6-s3c2410 \
