@@ -1,0 +1,12 @@
+subarch ixp4xx
+cpuinfo slug.cpuinfo
+majors 2.6
+flavour ixp4xx
+kernel-2.6 linux-image-2.6-ixp4xx
+usable \
+  linux-image-2.6-ixp4xx
+unusable \
+  linux-image-2.6-iop32x \
+  linux-image-2.6-netwinder \
+  linux-image-2.6-rpc \
+  linux-image-2.6-s3c2410
