@@ -1,8 +1,12 @@
 base-installer (1.73) UNRELEASED; urgency=low
 
+  [ Aurélien GÉRÔME ]
   * Add VIA C7 processor definition and test case. Closes: #410819.
 
- -- Aurélien GÉRÔME <ag@roxor.cx>  Tue, 13 Feb 2007 17:58:27 +0100
+  [ Joey Hess ]
+  * Add support for armel.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 14 Feb 2007 16:28:10 -0500
 
 base-installer (1.72) unstable; urgency=low
 
